@startuml Pokemon_ERD
skinparam linetype ortho
skinparam shadowing false
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 12
skinparam entity {
  BackgroundColor #F8F8D8
  BorderColor #333333
}

title Pokemon Game - Entity Relationship Diagram

legend top left
  **Dynamic Data** = User Progress (users, players, pokemons)
  **Static Data** = Game Config (pokedex, items, game_phases, locations)
  Inventory & NPCs stored as JSON inside parent tables.
end legend

' ================================================================
' DYNAMIC DATA (User Progress)
' ================================================================

entity "Users" as U {
  * Id : INT <<PK, Auto>>
  --
  Username : VARCHAR(50) <<UNIQUE>>
  Password : VARCHAR(255)
}

entity "Players" as P {
  * UserId : INT <<PK, FK>>
  --
  Name : VARCHAR(100)
  CurrentPhase : INT
  CurrentLocation : VARCHAR(100)
  Badges : TEXT (JSON)
  InventoryData : LONGTEXT (JSON)
  IsChampion : TINYINT(1)
  PvPWins : INT
  PvPLosses : INT
}

entity "Pokemons" as PK {
  * Id : INT <<PK, Auto>>
  --
  PlayerId : INT <<FK>>
  SpeciesId : INT <<FK>>
  Level : INT
  TotalExp : INT
  CurrentExp : INT
  MaxExpForNextLevel : INT
  CurrentHP : INT
  MaxHP : INT
  IsFainted : TINYINT(1)
  Status : INT (enum)
  MovesData : TEXT (JSON)
}

' ================================================================
' STATIC DATA (Game Configuration)
' ================================================================

entity "Pokedex" as PS {
  * Id : INT <<PK>>
  --
  Name : VARCHAR(100)
  Data : LONGTEXT (JSON)
}

entity "Items" as I {
  * Id : INT <<PK>>
  --
  Name : VARCHAR(100)
  Type : VARCHAR(50)
  Details : TEXT (JSON)
}

entity "Game Phases" as GP {
  * PhaseId : INT <<PK>>
  --
  Name : VARCHAR(100)
}

entity "Locations" as L {
  * Id : INT <<PK>>
  --
  PhaseId : INT <<FK>>
  Name : VARCHAR(100)
  MinLevel : INT
  MaxLevel : INT
  WildPokemons : TEXT (JSON)
  Narratives : TEXT (JSON)
  NPCs : LONGTEXT (JSON)
}

' ================================================================
' RELATIONSHIPS
' ================================================================

U ||--|| P
P ||--o{ PK
PK }o--|| PS
GP ||--o{ L
P }o..o{ I : "InventoryData JSON\nreferences Items"

' ================================================================
' NOTES (JSON field documentation)
' ================================================================

note right of PS
  **Data JSON contains:**
  Types, BaseStats,
  MoveSet, CatchRate,
  BaseExp, EvolutionId,
  EvolutionLevel
end note

note right of I
  **Details JSON contains:**
  Description, Category, Price
  HealAmount (Healing)
  CatchRateMultiplier (Capture)
  SoldRate (General)
end note

note bottom of L
  **NPCs JSON contains:**
  Name, Role, Dialogue,
  Action, RequiredBadge,
  PokemonTeam, ActionParam
end note

note bottom of P
  **InventoryData:** nested JSON dict
  Key = ItemCategory, Value = {Name: [Items]}
end note

note bottom of PK
  **MovesData:** JSON array
  [{Name, Type, Power, PP, MoveType, LevelLearned}]
end note

@enduml